# actor

./: Cargo.toml  LICENSE  README.md
actor_dynamic/: Cargo.toml
actor_dynamic/examples/: ping.rs  ring.rs
actor_dynamic/src/: actor.rs  context.rs  envelope.rs  handler.rs  lib.rs
actor_static/: Cargo.toml
actor_static/examples/: ping.rs  ring.rs
actor_static/src/: actor.rs  context.rs  handler.rs  lib.rs  message.rs
