[package]
name = "actor-dynamic"
version = "0.1.0"
authors = ["danielalvsaaker <daniel@nopemail.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }
